# yingjie-qwen-phone-gpu-trial

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
android/: README.md
android/probe-app/: README.md  gradlew  gradlew.bat  local.properties  settings.gradle
android/probe-app/app/src/main/cpp/: CMakeLists.txt  qpnpu_phase6_native.cpp  qpnpu_phase7a_native.cpp  qpnpu_phase7c_native.cpp  qpnpu_probe_native.cpp  qpnpu_toy_decode_native.cpp
benchmarks/: README.md
benchmarks/configs/: microbench.yaml  model_bench.yaml
benchmarks/results/: aws_remote_native_microbench_2026-07-01_4c7ffcfd9cd6_first.json  aws_remote_native_microbench_2026-07-01_4c7ffcfd9cd6_latest.json  (+58 more)
configs/: kernel_config.example.json  trial.yaml
docs/: AWS_DEVICE_FARM.md  BACKENDS.md  BENCHMARKING.md  HARDWARE_CHARACTERIZATION.md  HARDWARE_CHARACTERIZATION_LADDER.md  HARDWARE_PROBE.md  MODEL_PIPELINE.md  NATIVE_VERIFICATION.md  PERFORMANCE_TARGETS.md  PHASE_10_LAYER_SLICE_CORRECTNESS.md  PHASE_4B_RESULTS.md  PHASE_5_NATIVE_MICROBENCH.md  PHASE_6_ANDROID_CHARACTERIZATION.md  PHASE_7A_GUARDED_ISA_PROBES.md  PHASE_7B_ANDROID_TOY_DECODE.md  PHASE_7C_GENERATED_KERNELS.md  PHASE_8_EXTERNAL_MODEL_DELIVERY.md  PHASE_9_NATIVE_SHARD_LOADER.md  QWEN_9B_DEVICE_FARM_PLAN.md  TARGET_HARDWARE_PROFILE.md  WORKFLOW_PLAN.md
models/: README.md
native/: CMakeLists.txt  README.md
native/backends/cpu/: README.md  cpu_backend.cpp  cpu_backend.h  int4_matvec.cpp  rmsnorm.cpp  rope.cpp  softmax.cpp
native/backends/nnapi/: README.md  nnapi_backend.cpp  nnapi_backend.h
native/backends/qnn_stub/: README.md  qnn_backend.cpp  qnn_backend.h
native/backends/vulkan/: README.md  vulkan_backend.cpp  vulkan_backend.h
native/include/qpnpu/: backend.h  kernels.h  model.h  probe.h  tensor.h
native/src/: README.md  model.cpp  probe.cpp  runtime.cpp  tensor.cpp
native/tests/: README.md  test_backend_availability.cpp  test_int4_matvec.cpp  test_rmsnorm.cpp  test_rope.cpp  test_softmax.cpp
native/tools/: qpnpu_microbench.cpp
qpnpu/: __init__.py  adb_probe.py  android_logcat.py  android_phase6.py  android_phase7a.py  android_phase7c.py  android_phase8.py  android_phase9.py  android_probe.py  android_toy_decode.py  benchmark.py  config.py  hardware_characterization.py  kernel_config.py  layer_slice.py  model_artifact.py  model_format.py  probe_schema.py  quant.py  toy_model.py  toy_runtime.py
tests/: test_adb_probe.py  test_android_logcat_extract.py  test_android_native_microbench.py  test_android_phase6.py  test_android_phase7a.py  test_android_phase7c.py  test_android_phase8.py  test_android_phase9.py  test_android_probe_summary.py  test_android_toy_decode.py  test_benchmark_parser.py  test_benchmark_payloads.py  test_config.py  test_find_probe_apk.py  test_hardware_characterization.py  test_kernel_config.py  test_layer_slice.py  test_model_artifact.py  test_model_metadata.py  test_probe_schema.py  test_quant.py  test_toy_model.py  test_toy_runtime.py
(+64 files in other folders)
